# projectm

./: .gitignore  CMakeLists.txt  build_c_module_for_python.py  helpers.py  my_sdl.cpp  notes.md  test_winamp_visual.py  winamp_visualmodule.cpp
src/api/include/projectM-4/: render_opengl.h
src/libprojectM/: CMakeLists.txt  Preset.hpp  PresetFactoryManager.cpp  ProjectM.cpp  ProjectM.hpp  ProjectMCWrapper.cpp  projectM-opengl.h
src/libprojectM/MilkdropPreset/: MilkdropPreset.cpp  MilkdropPresetFactory.cpp
src/playlist/: Playlist.cpp
src/sdl-test-ui/: CMakeLists.txt  audioCapture.cpp  opengl.h  pmSDL.cpp  pmSDL.hpp  projectM_SDL_main.cpp  setup.cpp  setup.hpp
test_sdl_audio/: CMakeLists.txt  features.cmake  test_sdl.cpp
